Add "turn" to unit definitions

--- a/preview/unit-definitions.html
+++ b/preview/unit-definitions.html
@@ -512,6 +512,7 @@
 <tr><td>tropical year</td><td>31556925.9747</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
 <tr><td>troy ounce</td><td>0.0311034768</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
 <tr><td>tsp</td><td><span class='fraction'><span>0.003785411784</span><span class='rule'></span><span>768</span></span></td><td>0</td><td>0</td><td>3</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>teaspoon</td></tr>
+<tr><td>turn</td><td>6.28318530717958</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>2 π radians</td></tr>
 <tr><td>twip</td><td><span class='fraction'><span>0.0254</span><span class='rule'></span><span>1440</span></span></td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>20th of an adobe point</td></tr>
 <tr><td>unit</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td></td></tr>
 <tr><td>vapeur</td><td>735.49875</td><td>0</td><td>0</td><td>2</td><td>1</td><td>-3</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>metric hp</td></tr>
