--- a/site/manual.html
+++ b/site/manual.html
@@ -577,6 +577,9 @@ total                       | sumAbove()``</code></pre><p>will render like this:
 <dt id='abs'>abs(z)</dt>
 <dd><p>Absolute value of a real number. Magnitude of a complex number.</p>
 </dd>
+<dt id='accumulate'>accumulate(𝐕)</dt>
+<dd><p>Takes a vector, 𝐕, and returns a new vector whose elements are each the sum of the preceding elements in 𝐕.<br>Example: <span class="tex" data-tex="\operatorname{accumulate}\left(\begin{bmatrix}2 &amp; 4 &amp; 1 \end{bmatrix}\right)= \begin{bmatrix}2 &amp; 6 &amp; 7 \end{bmatrix}"></span></p>
+</dd>
 <dt id='acos'>acos(<em>z</em>), asin(<em>z</em>), atan(<em>z</em>), asec(<em>z</em>), acsc(<em>z</em>), acot(<em>z</em>)</dt>
 <dd><p>Inverse trigonometry functions. One can also call an inverse trigonometry function with a superscript, as in <span class="tex" data-tex="\cos^{\text{-}1}{x}"></span>.</p>
 </dd>
