--- a/site/offline.html
+++ b/site/offline.html
@@ -6,9 +6,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hurmet Offline</title>
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-<link rel="stylesheet" href="https://hurmet.app/katex.css">
+<link rel="stylesheet" href="https://hurmet.app/katex.min.css">
 <link rel="stylesheet" href="https://hurmet.app/styles.min.css">
 <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
+<script type="module" src="https://hurmet.app/prosemirror.min.mjs" defer></script>
 </head>
 
 <body>
@@ -65,7 +66,6 @@ Display:
 
 <div id="copyright">Copyright © 2020-2022 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
 
-<script type="module" src="https://hurmet.app/prosemirror.min.mjs"></script>
 <script>
   window.addEventListener('beforeunload', function (e) {
 	// If changes have been made, put up a dialog box to warn the user.
