--- a/site/index.html
+++ b/site/index.html
@@ -16,8 +16,8 @@
 <body>
 <nav>
    <ul>
-     <li><a href="./examples.html" target="_blank">Examples</a></li>
-     <li><a href="./manual.html" target="_blank">Documentation</a></li>
+     <li><a href="https://hurmet.app/examples.html" target="_blank">Examples</a></li>
+     <li><a href="https://hurmet.app/manual.html" target="_blank">Documentation</a></li>
      <li><a href="https://github.com/ronkok/Hurmet" target="_blank">GitHub</a></li>
    </ul>
 </nav>
@@ -72,7 +72,7 @@ Display:
 
 <div id="copyright">Copyright © 2020-2022 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
 
-<script type="module" src="./prosemirror.min.mjs"></script>
+<script type="module" src="https://hurmet.app/prosemirror.min.mjs"></script>
 <script>
   window.addEventListener('beforeunload', function (e) {
 	// If changes have been made, put up a dialog box to warn the user.
