--- a/site/offline.html
+++ b/site/offline.html
@@ -5,11 +5,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hurmet Offline</title>
-<link rel="icon" type="image/x-icon" href="./images/favicon.ico">
-<link rel="stylesheet" href="./katex.min.css">
-<link rel="stylesheet" href="./styles.min.css">
+<link rel="icon" type="image/x-icon" href="https://hurmet.app/images/favicon.ico">
+<link rel="stylesheet" href="https://hurmet.app/katex.min.css">
+<link rel="stylesheet" href="https://hurmet.app/styles.min.css">
 <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
-<script type="module" src="./prosemirror.min.mjs" defer></script>
+<script type="module" src="https://hurmet.app/prosemirror.min.mjs" defer></script>
 </head>
 
 <body>
