Change to ES modules in Node.js

--- a/preview/index.html
+++ b/preview/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="katex.min.css">
 <link rel="stylesheet" href="styles.css">
 <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
-<script type="module" src="prosemirror.mjs" defer></script>
+<script type="module" src="prosemirror.js" defer></script>
 </head>
 
 <body>
