--- a/site/manual.html
+++ b/site/manual.html
@@ -1219,6 +1219,6 @@ end</code></pre><p>A Hurmet document can load an entire module into one variable
 <div id="input-container"><form><div id="demo-input"></div></form></div>
 <div id="demo-output"></div>
 </div> <!-- demo -->
-<script type="module" src="../demo.min.mjs"></script>
+<script type="module" src="../demo.min.js"></script>
 </body>
 </html>
