--- a/site/index.html
+++ b/site/index.html
@@ -72,7 +72,7 @@ Display:
 
 <div id="copyright">Copyright © 2020-2022 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
 
-<script type="module" src="https://hurmet.app/prosemirror.min.mjs"></script>
+<script src="https://hurmet.app/prosemirror.min.js"></script>
 <script>
   window.addEventListener('beforeunload', function (e) {
 	// If changes have been made, put up a dialog box to warn the user.
