Add Review section

--- a/site/examples.html
+++ b/site/examples.html
@@ -173,7 +173,9 @@ Say that we want to build a cylindrical water tank in 5-foot courses.
 <p>We can invert the first matrix and multiply it times both sides. That solves for each variable.</p>
 <p><span class="hurmet-calc" data-entry="[x; y; z] = (3, 2, 1; 2, 3, 1; 1, 2, 3)⁻¹ [39; 34; 26] = ?"></span></p>
 
-<p></p>
+<h2>Reviews</h2>
+<p><span class="hurmet-comment" data-comment="Don’t forget diffs."><span class="left-triangle"></span><span class="comment-payload"><span><span>Don’t forget diffs.</span></span></span></span>Reviewers can write comments that are visibly different than the document.</p>
+<p>You can save a document snapshot and later display the difference between the snapshot and the current document.</p>
 
 <h2>User-Defined Functions</h2>
 <p>You can write your own Hurmet functions. The one below implements an infinite series developed by Francois Viète in 1597, to estimate the value of π. He derived this series:</p>
