--- a/site/index.html
+++ b/site/index.html
@@ -5,10 +5,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hurmet.app</title>
-<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+<link rel="icon" type="image/png" href="./images/favicon.png">
 
 <script>if ("serviceWorker" in navigator && !navigator.serviceWorker.controller) { navigator.serviceWorker.register("./sw.js") }</script>
-<link rel="stylesheet" href="katex.min.css">
+<link rel="stylesheet" href="katex.min.css" defer>
 <link rel="stylesheet" href="styles.min.css">
 <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
 </head>
