--- a/preview/index.html
+++ b/preview/index.html
@@ -2,14 +2,16 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Hurmet.app</title>
-<link rel="icon" type="image/png" href="../site/images/favicon.png">
-
-<link rel="stylesheet" href="katex.min.css" defer>
-<link rel="stylesheet" href="styles.css">
-<style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Hurmet.app</title>
+  <link rel="icon" type="image/png" href="../site/images/favicon.png">
+  <script src="../site/katex.min.js"></script>
+  <script src="../site/temml.min.js"></script>
+  <script src="hurmet.js"></script>
+  <link rel="stylesheet" href="../site/katex.min.css" defer>
+  <link rel="stylesheet" href="styles.css">
+  <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
 </head>
 
 <body>
