Include hurmet.min.js

--- a/site/examples.html
+++ b/site/examples.html
@@ -6,7 +6,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hurmet Examples</title>
 <link rel="icon" type="image/png" href="./images/favicon.png">
-
+<script src="katex.min.js"></script>
+<script src="temml.min.js"></script>
+<script src="hurmet.min.js"></script>
 <link rel="stylesheet" href="katex.min.css">
 <link rel="stylesheet" href="styles.min.css">
 <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
