--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,9 @@
 <link rel="icon" type="image/png" href="./images/favicon.png">
 
 <script>if ("serviceWorker" in navigator && !navigator.serviceWorker.controller) { navigator.serviceWorker.register("./sw.js") }</script>
+<script src="katex.min.js"></script>
+<script src="temml.min.js"></script>
+<script src="hurmet.min.js"></script>
 <link rel="stylesheet" href="katex.min.css" defer>
 <link rel="stylesheet" href="styles.min.css">
 <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
