Edit path names

--- a/site/examples.html
+++ b/site/examples.html
@@ -5,12 +5,12 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hurmet Examples</title>
-<link rel="icon" type="image/png" href="./images/favicon.png">
-<script src="katex.min.js"></script>
-<script src="temml.min.js"></script>
-<script src="hurmet.min.js"></script>
-<link rel="stylesheet" href="katex.min.css">
-<link rel="stylesheet" href="styles.min.css">
+<link rel="icon" type="image/png" href="https://hurmet.app/images/favicon.png">
+<script src="https://hurmet.app/katex.min.js"></script>
+<script src="https://hurmet.app/temml.min.js"></script>
+<script src="https://hurmet.app/hurmet.min.js"></script>
+<link rel="stylesheet" href="https://hurmet.app/katex.min.css">
+<link rel="stylesheet" href="https://hurmet.app/styles.min.css">
 <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
 </head>
 
@@ -234,7 +234,7 @@ end"></span></p></td>
 
 <div id="copyright">Copyright © 2020-2022 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
 
-<script type="module" src="./prosemirror.min.js"></script>
+<script type="module" src="https://hurmet.app/prosemirror.min.js"></script>
 <script>
   window.addEventListener('beforeunload', function (e) {
 	// If changes have been made, put up a dialog box to warn the user.
