--- a/site/index.html
+++ b/site/index.html
@@ -5,14 +5,14 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hurmet.app</title>
-<link rel="icon" type="image/png" href="./images/favicon.png">
+<link rel="icon" type="image/png" href="https://hurmet.app/images/favicon.png">
 
 <script>if ("serviceWorker" in navigator && !navigator.serviceWorker.controller) { navigator.serviceWorker.register("./sw.js") }</script>
-<script src="katex.min.js"></script>
-<script src="temml.min.js"></script>
-<script src="hurmet.min.js"></script>
-<link rel="stylesheet" href="katex.min.css" defer>
-<link rel="stylesheet" href="styles.min.css">
+<script src="https://hurmet.app/katex.min.js"></script>
+<script src="https://hurmet.app/temml.min.js"></script>
+<script src="https://hurmet.app/hurmet.min.js"></script>
+<link rel="stylesheet" href="https://hurmet.app/katex.min.css" defer>
+<link rel="stylesheet" href="https://hurmet.app/styles.min.css">
 <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
 </head>
 
