--- a/site/offline.html
+++ b/site/offline.html
@@ -68,7 +68,7 @@ Display:
 
 <div id="copyright">Copyright © 2020-2022 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
 
-<script src="https://hurmet.app/prosemirror.js"></script>
+<script src="https://hurmet.app/prosemirror.min.js"></script>
 <script>
   window.addEventListener('beforeunload', function (e) {
 	// If changes have been made, put up a dialog box to warn the user.
