--- a/preview/index.html
+++ b/preview/index.html
@@ -5,11 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hurmet.app</title>
-  <link rel="icon" type="image/png" href="../site/images/favicon.png">
-  <script src="../site/katex.min.js"></script>
-  <script src="../site/temml.min.js"></script>
-  <script src="hurmet.js"></script>
-  <link rel="stylesheet" href="../site/katex.min.css" defer>
+  <script type="module" src="./katex.js"></script>
+  <script type="module" src="./temml.js"></script>
+  <link rel="stylesheet" href="./katex.css" defer>
   <link rel="stylesheet" href="styles.css">
   <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
 </head>
@@ -108,7 +106,7 @@ Display:
 
 <div id="copyright">Copyright © 2020-2022 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
 
-<script src="prosemirror.js"></script>
+<script type="module" src="prosemirror.js"></script>
 <script>
   window.addEventListener('beforeunload', function (e) {
 	// If changes have been made, put up a dialog box to warn the user.
