--- a/site/offline.html
+++ b/site/offline.html
@@ -5,12 +5,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hurmet Offline</title>
-<link rel="icon" type="image/png" href="https://hurmet.app/images/favicon.png">
 <script src="https://hurmet.app/katex.min.js"></script>
 <script src="https://hurmet.app/temml.min.js"></script>
 <script src="https://hurmet.app/hurmet.min.js"></script>
-<link rel="stylesheet" href="https://hurmet.app/katex.min.css">
-<link rel="stylesheet" href="https://hurmet.app/styles.min.css">
+<link rel="stylesheet" href="./katex.min.css" defer>
+<link rel="stylesheet" href="./styles.min.css">
 <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
 </head>
 
