--- a/site/index.html
+++ b/site/index.html
@@ -10,16 +10,7 @@
   <script>const registerServiceWorker = async () => {
     if ("serviceWorker" in navigator) {
       try {
-        const registration = await navigator.serviceWorker.register("/sw.js", {
-          scope: "/",
-        });
-        if (registration.installing) {
-          console.log("Service worker installing");
-        } else if (registration.waiting) {
-          console.log("Service worker installed");
-        } else if (registration.active) {
-          console.log("Service worker active");
-        }
+        const registration = await navigator.serviceWorker.register("/sw.js", { scope: "/", })
       } catch (error) {
         console.error(`Registration failed with ${error}`);
       }
