Try new path for offline styles

--- a/site/index.html
+++ b/site/index.html
@@ -79,7 +79,7 @@ Display:
 
 <div id="copyright">Copyright © 2020-2023 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
 
-<script type="module" src="./prosemirror.min.js"></script>
+<script type="module" src="/prosemirror.min.js"></script>
 <script>
   window.addEventListener('beforeunload', function (e) {
 	// If changes have been made, put up a dialog box to warn the user.
