--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hurmet.app</title>
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="icon" type="image/png" href="./images/favicon.png">
   <link rel="stylesheet" href="/styles.min.css">
   <script>const registerServiceWorker = async () => {
     if ("serviceWorker" in navigator) {
