Update currency units

--- a/site/manual.html
+++ b/site/manual.html
@@ -283,7 +283,7 @@ return 3</code></pre></td></tr>
 <tr><td><code>x = 2 A = %</code></td><td><math><mrow><mi>x</mi><mo>=</mo></mrow><mrow><mn>2</mn><mspace width="0.1667em"></mspace><mi>A</mi><mo>=</mo></mrow><mrow><mn>16</mn></mrow></math></td></tr>
 <tr><td><code>A = 2 &#x27;m&#x27; × 4 &#x27;feet&#x27; = ?? m²</code></td><td><math><mrow><mi>A</mi><mo>=</mo></mrow><mrow><mn>2</mn><mspace width="0.2778em"></mspace><mtext>m</mtext><mo>×</mo></mrow><mrow><mn>4</mn><mspace width="0.2778em"></mspace><mtext>feet</mtext><mo>=</mo></mrow><mrow><mn>2.4384</mn><mspace width="0.2778em"></mspace><msup><mtext>m</mtext><mn>2</mn></msup></mrow></math></td></tr>
 </table>
-<p>The expression form is more precisely defined as:</p>
+<p>The statement form is more precisely defined as:</p>
 <p><img src="images/statement-railroad.svg" alt="optional identifier equals expression equals display selector unit name"></p>
 <p>At the beginning of the statement, you can write an optional variable name. The result of the calculation will be assigned to that variable. Expressions later in the document can call the variable. Variable names must qualify as valid <a href='#identifiers'>identifiers</a>. They are case-sensitive and bold-sensitive. A search for variable <em>E</em> will not find <em>e</em>. A search for <strong>M</strong> will not find <em>M</em>.</p>
 <p>You can define a unit for the result with a leading currency symbol or a trailing unit name, but not both in the same statement.</p>
