Change subset operator

--- a/site/manual.html
+++ b/site/manual.html
@@ -555,7 +555,8 @@ total                       | sumAbove()``</code></pre><p>will render like this:
 <tr><td>≥</td><td></td><td>auto-correct: &gt;=</td></tr>
 <tr><td>∈   </td><td><math><mrow><mi>c</mi><mo>∈</mo></mrow><mrow><mi>s</mi></mrow></math>   </td><td>Is an element of a matrix or is a character of a string, or is a property of a single-row data frame<br>auto-correct: \in</td></tr>
 <tr><td>∉ </td><td><math><mrow><mi>c</mi><mo>∉</mo></mrow><mrow><mi>s</mi></mrow></math> </td><td>Is not an element of<br>auto-correct: \notin</td></tr>
-<tr><td>⋐ </td><td><math><mrow><mi>c</mi><mo>⋐</mo></mrow><mrow><mi>s</mi></mrow></math> </td><td>Is a proper subset of<br> auto-correct: \Subset</td></tr>
+<tr><td>⊆ </td><td><math><mrow><mi>c</mi><mo>⊆</mo></mrow><mrow><mi>s</mi></mrow></math> </td><td>Is a subset of<br> auto-correct: \subseteq</td></tr>
+<tr><td>⊈ </td><td><math><mrow><mi>c</mi><mo>⊈</mo></mrow><mrow><mi>s</mi></mrow></math> </td><td>Is not a subset of<br> auto-correct: \nsubseteq</td></tr>
 <tr><td>and</td><td>if <em>a</em> and <em>b</em></td><td>Logical and</td></tr>
 <tr><td>or</td><td></td><td>Logical or</td></tr>
 <tr><td>∧</td><td></td><td>Logical and. <br>auto-correct: ^^</td></tr>
