Enable captions for images

--- a/site/examples.html
+++ b/site/examples.html
@@ -160,7 +160,8 @@ Say that we want to build a cylindrical water tank in 5-foot courses.
 <p><span class="hurmet-calc" data-entry="(0.2 + 0.1 = 0.3) = ?"></span></p>
 
 <p>Hurmet can handle bigger numbers than many languages: </p>
-<p><span class="hurmet-calc" data-entry="569936821221962380720³+ (-569936821113563493509)³ + (-472715493453327032)³= ?"></span></p>
+<p><span class="hurmet-calc" data-entry="569936821221962380720³+ (-569936821113563493509)³ 
+  + (-472715493453327032)³= ?"></span></p>
 
 <p></p>
 
