Place comments before selected block

--- a/site/manual.html
+++ b/site/manual.html
@@ -40,10 +40,9 @@
 <p>You can create a print header in any document by clicking the File | Print Header menu choice. Later, when you click the File | Print… menu choice, the header will be printed at the top of every page (except the cover page). The header is a table and it should remain a table. Otherwise, edit it any way you want.</p>
 <p>If you write <code>$PAGE</code> into a print header, Hurmet will print page numbers at that location.</p>
 <h3 id='comments'>Comments</h3>
-<p>The <img alt="comment"> button enables you to write a comment regarding the nearby text. The comment will look like this:</p>
-<div><span class="hurmet-comment" data-comment="Citation needed"><span class="left-triangle"></span><span class="comment-payload"><span><span>Citation needed</span></span></span></span></div>
+<aside class="comment">Citation needed</aside><p>The <img alt="comment"> button enables you to write a comment like the nearby text bubble:</p>
+<p>A command in the “Docs” menu will delete all comments in the document.</p>
 <br>
-<p>Comments can be styled with Markdown inline styles: _<em>italic</em>_, **<strong>bold</strong>**, `<code>code</code>`, <code>~</code><sub>subscript</sub><code>~</code>, <code>~~</code><del>strikethrough</del><code>~~</code>, $<math><mrow><mtext>T</mtext><mspace width="-0.1667em" style="margin-left:-0.1667em;"></mspace><mpadded voffset="-0.2155em" height="-0.2155em" depth="+0.2155em"><mstyle scriptlevel="0" displaystyle="false"><mtext>E</mtext></mstyle></mpadded><mspace width="-0.125em" style="margin-left:-0.125em;"></mspace><mtext>X</mtext></mrow></math>$, and ¢<math><mstyle displaystyle="true" scriptlevel="0"><mfrac><mrow><mrow><mi mathvariant="normal">c</mi></mrow><mrow><mi mathvariant="normal">a</mi></mrow><mrow><mi mathvariant="normal">l</mi></mrow><mrow><mi mathvariant="normal">c</mi></mrow><mrow><mi mathvariant="normal">u</mi></mrow></mrow><mrow><mrow><mi mathvariant="normal">l</mi></mrow><mrow><mi mathvariant="normal">a</mi></mrow><mrow><mi mathvariant="normal">t</mi></mrow><mrow><mi mathvariant="normal">i</mi></mrow><mrow><mi mathvariant="normal">o</mi></mrow><mrow><mi mathvariant="normal">n</mi></mrow></mrow></mfrac></mstyle></math>¢.</p>
 <h3 id='table-of-contents'>Table of Contents</h3>
 <p>The <strong>ToC</strong> button creates a Table of Contents at the selection point. The table will be built from Headings in your document. In the ToC dialog box, you can choose which heading levels to include.</p>
 <h3 id='markdown'>Markdown</h3>
